# heizung-sonnblick

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTEXT.md  LICENSE  README.md  STATUS.md  UEBERGABE-OFFENE-PUNKTE.md  UEBERGABE-SCHULDEN.md  UEBERGABE-STATUS.md  docker-compose.yml  erich.pub  setup-ssh.sh  sprint1.3.ps1  sprint1.4.ps1  sprint1.5.ps1  sprint1.7.ps1
backend/: Dockerfile  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_domain_model.py  0002_lorawan_fcnt.py  0003a_stammdaten_schema.py  0003b_event_log_hypertable.py  0004_room_eval_timestamps.py  0008_manual_override.py  0009_sensor_reading_open_window.py  0010_attached_backplate_and_fw.py  0011_config_audit.py  0012_summer_mode_scenario.py  0013_fix_summer_mode_encoding.py  0014_auth_and_business_audit.py
backend/scripts/: README.md  activate_open_window_detection.py  smoke_engine_lock.py
backend/src/heizung/: __init__.py  celery_app.py  config.py  db.py  main.py  seed.py
backend/src/heizung/api/: __init__.py
backend/src/heizung/auth/: __init__.py  dependencies.py  jwt.py  password.py  rate_limit.py
backend/src/heizung/cli/: __init__.py  hash_password.py
backend/src/heizung/drivers/: __init__.py
backend/src/heizung/models/: __init__.py  business_audit.py  config_audit.py  control_command.py  device.py  enums.py  event_log.py  global_config.py  heating_zone.py  manual_override.py  manual_setpoint_event.py  occupancy.py  room.py  room_type.py  rule_config.py  scenario.py  scenario_assignment.py  season.py  sensor_reading.py  user.py
backend/src/heizung/rules/: __init__.py  constants.py  engine.py  inferred_window.py  scenarios.py
backend/tests/: conftest.py  test_api_auth.py  test_api_device_hardware_status.py  test_api_device_zone.py  test_api_overrides.py  test_api_read_endpoints_auth.py  test_api_rule_configs.py  test_api_scenarios.py  test_api_users.py  test_celery_app.py  test_codec_mirror.py  test_config.py  test_device_adapter.py  test_device_schema.py  test_downlink_adapter.py  test_engine_layer3.py  test_engine_layer4.py  test_engine_layer4_detached.py  test_engine_layer4_synthetic.py  test_engine_lock.py  test_engine_skeleton.py  test_engine_trace_consistency.py  test_health.py  test_manual_override_model.py  test_manual_override_schema.py  test_migrations_roundtrip.py  test_models.py  test_mqtt_subscriber.py  test_override_cleanup_tasks.py  test_override_pms_hook.py  test_override_service.py  test_rules_constants.py  test_seed_scenarios.py
(+237 files in other folders)
